k3s-dashboard/longhorn-dashboard-ingressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.guohongjie.asia`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
      middlewares:
        - name: my-basic-auth
          namespace: longhorn-system
  tls:
    certResolver: myresolver
