k3s-dashboard/traefik-dashboard-ingressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.guohongjie.asia`) && (PathPrefix(`/api`) ||  PathPrefix(`/dashboard`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: my-basic-auth
          namespace: kube-system
  tls:
    certResolver: myresolver
